config/kustomize/devoverlays/eus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actions-example-go
  labels:
    istio-injection: enabled
