config/kustomize/devoverlays/eus/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: actions-example-go
spec:
  template:
    spec:
      containers:
        - name: actions-example-go
          volumeMounts:
            - name: settings-volume
              mountPath: /settings.json
              subPath: settings.json
            - name: secrets-store
              mountPath: "/etc/secrets"
              readOnly: true
      volumes:
        - name: settings-volume
          configMap:
            name: settings
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: example-go-kv
