config/kustomize/devoverlays/eus/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: actions-example-go
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/ingressgateway
  http:
  - match:
    - uri:
        prefix: /actions-example-go/
    rewrite:
      uri: /
    route:
    - destination:
        host: actions-example-go
        port:
          number: 8080
